--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>L’open data en France</title>
     <meta charset="utf-8" />
     <meta name="author" content="Joël Gombin" />
-    <meta name="date" content="2025-01-24" />
+    <meta name="date" content="2025-02-06" />
     <script src="libs/header-attrs-2.29/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 # L’open data en France
 ## Master 2 DROIT ALGORITHMIQUE ET GOUVERNANCE DES DONNÉES
 ### Joël Gombin
-### 24 Jan 2025
+### 06 Feb 2025
 
 ---
 
@@ -577,6 +577,9 @@ L’ouverture est enfin une injonction adressée aux détenteurs de données, ta
 
 ---
 class: middle
+
+Anciens étudiants de l'Université de Nice (connus de Wikidate)
+
 &lt;iframe style="width: 80vw; height: 50vh; border: none;" src="https://query.wikidata.org/embed.html#SELECT%20DISTINCT%20%3Fitem%20%3FitemLabel%20%3FitemDescription%20%3FdateOfBirth%0AWHERE%20%7B%0A%20%20SERVICE%20wikibase%3Alabel%20%7B%20bd%3AserviceParam%20wikibase%3Alanguage%20%22fr%22.%20%7D%0A%20%20%3Fitem%20p%3AP69%20%3Fstatement0.%0A%20%20%3Fstatement0%20(ps%3AP69%2F(wdt%3AP279*))%20wd%3AQ19370961.%0A%20%20%3Fitem%20wdt%3AP569%20%3FdateOfBirth.%0A%7D%0AORDER%20BY%20DESC(%3FdateOfBirth)%0ALIMIT%20100" referrerpolicy="origin" sandbox="allow-scripts allow-same-origin allow-popups"&gt;&lt;/iframe&gt;
 ---
 
@@ -585,7 +588,7 @@ class: middle
 .reduite[.center[![](img/declaration.png)]]
 
 ---
-## Des principes techniques sans portée politique
+## Des principes techniques sans portée politique ?
 &gt;"Il peut être vrai en un sens qu'un régime devient plus ouvert chaque fois qu'il fournit des données ouvertes supplémentaires, même pour les sujets banals et apolitiques, mais il est facile d'imaginer qu'un régime fermé pourrait divulguer de grandes quantités de données conformes à ces huit exigences [de Sébastopol] **sans pour autant accroître sa responsabilité réelle en tant que gouvernement **. 
 
 &gt; Une diffusion électronique des déclarations de propagande faites par les dirigeants politiques de la Corée du Nord, par exemple, pourrait satisfaire à ces huit exigences et ne pas promouvoir une transparence ou une responsabilité supplémentaires de la part d'un régime notoirement fermé et opaque."
@@ -707,10 +710,10 @@ La notation RTI (Rght to information) est le principal outil mondial pour évalu
 ### Les conditions d'exercice du droit d'accès
 
 .red[ Une définition très large des documents administratifs]
-&gt; Les documents administratifs peuvent revêtir de nombreuses formes (dossiers, rapports, études, comptes rendus, procès-verbaux, statistiques, directives, instructions, circulaires, codes sources, etc.) et adopter tout support (écrit, enregistrement sonore ou visuel, forme numérique ou informatique). 
+&gt; Les documents administratifs peuvent revêtir de nombreuses formes (dossiers, rapports, études, comptes rendus, procès-verbaux, statistiques, directives, instructions, circulaires, codes sources, .red[données], etc.) et adopter tout support (écrit, enregistrement sonore ou visuel, forme numérique ou informatique). 
 
 Le droit d'accès s'appplique aux documents administratifs produits dans le cadre d'une .red[mission de service public] ie :
-&gt; Une mission d'intérêt général sous le contrôle de l'administration et qui est dotée à cette fin de prérogatives de puissance publique est chargée de l'exécution d'un service public. 
+&gt; Une mission d'intérêt général sous le contrôle de l'administration et qui est dotée à cette fin de prérogatives de puissance publique et est chargée de l'exécution d'un service public. 
 
 Il ne s’exerce que si l’administration a effectivement en sa possession le document demandé, que si le document est formellement **achevé**, qu'il existe et qu'il n'est pas **préparatoire à une décision administrative** en cours. 
 
@@ -741,7 +744,7 @@ La prohibition de la communication à des tiers ne porte pas sur les données pe
 La mise en ligne de données à caractère personnel sans anonymisation n'est permise que dans .red[**trois cas**] :
 1. une disposition législative contraire le prévoit (exemple : [Transparence Santé](https://www.data.gouv.fr/fr/datasets/transparence-sante-1/))
 2. si les personnes intéressées ont donné leur accord (consentement au sens de l’article 4 du RGPD)
-3. les documents relevant de [l’article D312-3-1 du CRPA](https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=51E99AF738C12521572D6A7F6C8C03E8.tplgfr23s_1?cidTexte=JORFTEXT000037797147&amp;dateTexte=&amp;oldAction=rechJO&amp;categorieLien=id&amp;idJO=JORFCONT000037796937)
+3. les documents explicitement visés par [l’article D312-3-1 du CRPA](https://www.legifrance.gouv.fr/affichTexte.do;jsessionid=51E99AF738C12521572D6A7F6C8C03E8.tplgfr23s_1?cidTexte=JORFTEXT000037797147&amp;dateTexte=&amp;oldAction=rechJO&amp;categorieLien=id&amp;idJO=JORFCONT000037796937)
 
 
 Hors de ces cas, il faut .red[**[anonymiser les données](https://github.com/SGMAP-AGD/anonymisation/wiki/Guide-de-l'anonymisation)**] : elles ne doivent plus se référer à une personne réelle (exit les noms, identifiants…) et ne doivent plus être spécifiques à un individu mais communes à un ensemble de personnes. L’indexation de ces données par un moteur de recherche externe est proscrite.
@@ -822,20 +825,81 @@ Utiliser une autre licence impose une **homologation** auprès de la DINUM avec 
 
 
 ---
-class: center, middle
-
-![](./img/giphy.gif)
-
----
 
 ## Pour la prochaine fois 
 
 Arpentage du livre *Les données de la démocratie* de Samuel Goëta :
 chacun lit un chapitre (à partir de "Le long chemin en France vers l’ouverture des données par défaut") et en prépare une discussion. 
 
+---
+
+class: inverse, center, middle
+
+# L'open data en pratique
+
+---
+## Les acteurs
+  - Dinum / Etalab
+  - réseau des AMDAC
+  - ANCT et réseau des chargés de mission numérique des SGAR
+  - collectivités territoriales
+  - CNIL
+  - régulateurs sectoriels (exemple : ART pour les dispositions de la loi LOM)
+  - conseil national de l'information géolocalisée
+
+---
+## Les outils
+  - data.gouv.fr (et API)
+  - portails ministériels
+  - portails locaux
+  - schema.data.gouv.fr
+
+---
+## Les données 
+  - service public de la donnée
+  - données d'intérêt général
+  - données publiques
+
+---
+## Les réutilisateurs 
+  - entreprises (dont services numériques)
+  - associations
+  - citoyens
+  - administrations
+  - chercheurs et enseignants
+  - journalistes
+  
+---
+
+class: inverse, center, middle
+
+# De la transparence à l'IA
+
+## Défis contemporains de la régulation des données
 
 ---
 
+## Enjeux de l'ouverture des données
+
+- ouverture par défaut, orientée par la demande ou par un objectif ("publishing with purpose") ?
+- stratégie transversale ou sectorielle ?
+- comment garantir la qualité des données ?
+- ouverture, publication, partage... ?
+- quels modèles économiques de l'ouverture des données ?
+
+---
+
+## Quelques autres enjeux de régulation des données
+
+- le Data Governance Act 
+  - services d'intermédiation des données (ex : AgDataHub)
+  - altruisme de données 
+- l'AI Act
+  - souligne la nécessité d'une transparence et d'une gouvernance des données utilisées dans le cadre de SIA
+  - intervention des régulateurs (CNIL, mais aussi DGCCRF et Défenseur des droits)
+- La construction d'une expertise technique publique (ex : PEREN)
+
+---
 class: inverse, center, middle
 
 # Ressources
