--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>L’open data en France</title>
     <meta charset="utf-8" />
     <meta name="author" content="Joël Gombin" />
-    <meta name="date" content="2025-02-06" />
+    <meta name="date" content="2025-02-07" />
     <script src="libs/header-attrs-2.29/header-attrs.js"></script>
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/datactivist.css" rel="stylesheet" />
@@ -17,7 +17,7 @@ class: center, middle, inverse, title-slide
 # L’open data en France
 ## Master 2 DROIT ALGORITHMIQUE ET GOUVERNANCE DES DONNÉES
 ### Joël Gombin
-### 06 Feb 2025
+### 07 Feb 2025
 
 ---
 
@@ -704,7 +704,7 @@ L'open data est comme la Tour de Pise : un très bel édifice posé sur des fond
 
 ???
 
-La notation RTI (Rght to information) est le principal outil mondial pour évaluer la solidité des cadres juridiques nationaux d'accès aux informations détenues par les autorités publiques (ou le droit à l'information, RTI). Il est largement utilisé par les organisations intergouvernementales, les défenseurs de la RTI, les réformateurs, les législateurs et autres.
+La notation RTI (Right to information) est le principal outil mondial pour évaluer la solidité des cadres juridiques nationaux d'accès aux informations détenues par les autorités publiques (ou le droit à l'information, RTI). Il est largement utilisé par les organisations intergouvernementales, les défenseurs de la RTI, les réformateurs, les législateurs et autres.
 
 ---
 ### Les conditions d'exercice du droit d'accès
@@ -843,7 +843,7 @@ class: inverse, center, middle
   - réseau des AMDAC
   - ANCT et réseau des chargés de mission numérique des SGAR
   - collectivités territoriales
-  - CNIL
+  - CADA
   - régulateurs sectoriels (exemple : ART pour les dispositions de la loi LOM)
   - conseil national de l'information géolocalisée
 
@@ -857,8 +857,8 @@ class: inverse, center, middle
 ---
 ## Les données 
   - service public de la donnée
-  - données d'intérêt général
   - données publiques
+  - données d'intérêt général
 
 ---
 ## Les réutilisateurs 
